@@ -4,7 +4,7 @@ License
 =======
 
 | **puppies**: The Public Photometry Pipeline for Exoplanets
-| Copyright (C) 2022 Patricio Cubillos
+| Copyright (C) 2021-2022 Patricio Cubillos
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
