@@ -1,5 +1,5 @@
-# Copyright (c) 2021 Patricio Cubillos
-# puppies is open-source software under the MIT license (see LICENSE)
+# Copyright (c) 2021-2022 Patricio Cubillos
+# puppies is open-source software under the GNU GPL-2.0 license (see LICENSE)
 
 __all__ = [
     'init',
@@ -12,7 +12,7 @@ __all__ = [
     'center',
     'photometry',
     'models',
-    ]
+]
 
 # Import utility sub-packages:
 from . import tools
