@@ -3,6 +3,6 @@ requires = [
     'setuptools>=40.8.0',
     'wheel',
     'oldest-supported-numpy',
-    ]
+]
 
 build-backend = "setuptools.build_meta"
